# routes/clinic.js
@@ -1,0 +1,12 @@
+var express = require('express');
+var clinicController = require('../controllers/clinic');
+
+exports.router = (function() {
+    var clinicRouter = express.Router();
+
+    clinicRouter.route('/').post(clinicController.post);
+    clinicRouter.route('/').get(clinicController.get);
+
+    return clinicRouter;
+
+})();
